5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1650_2449.log
== TEST (2019-05-23 14:59:26) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())

-- OUTPUT:
17.4
F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:59:30) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())

-- OUTPUT:
17.4
F
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:04:07) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=((c*e-b*f)/(a*e-b*d))
y=((a*f-c*d)/(a*e-b*d))
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e-b*f)/(a*e-b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:04:22) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=((c*e-b*f)/(a*e-b*d))
y=((a*f-c*d)/(a*e-b*d))
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e-b*f)/(a*e-b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:04:43) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=((c*e-b*f)/(a*e-b*d))
y=((a*f-c*d)/(a*e-b*d))
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e-b*f)/(a*e-b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:04:58) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
x=((c*e-b*f)/(a*e-b*d))
y=((a*f-c*d)/(a*e-b*d))
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.144772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=((c*e-b*f)/(a*e-b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:05:16) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())

if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e-b*f)/(a*e-b*d))
   y=((a*f-c*d)/(a*e-b*d))
	print(x)
	print(y)

-- ERROR:
File "XXXX", line 12
    y=((a*f-c*d)/(a*e-b*d))
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:05:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())

if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	x=((c*e-b*f)/(a*e-b*d))
    y=((a*f-c*d)/(a*e-b*d))
	print(x)
	print(y)

-- ERROR:
File "XXXX", line 12
    y=((a*f-c*d)/(a*e-b*d))
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:06:24) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
g=c*e-b*f
w=a*e-b*d
u=a*f-c*d
if((w)==0):
	print("Nao tem solucao")
else:
	x=g/w
	y=u/w
	print(x)
	print(y)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:06:41) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
e=float(input())
f=float(input())
g=c*e-b*f
w=a*e-b*d
u=a*f-c*d
if((w)==0):
	print("Nao tem solucao")
else:
	x=g/w
	y=u/w
	print(x)
	print(y)

-- EXECUTION TIME:
0.166643
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
